--- a/UnitTestai/UnitTestai.csproj
+++ b/UnitTestai/UnitTestai.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="SkaiciuotuvoTestai.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Uzduotis13.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
