--- a/SeleniumTestsWithoutPOM/SeleniumTestsWithoutPOM.csproj
+++ b/SeleniumTestsWithoutPOM/SeleniumTestsWithoutPOM.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Google.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeleniumEasy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
