--- a/SeleniumFramework/SeleniumFramework.csproj
+++ b/SeleniumFramework/SeleniumFramework.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Driver.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="Pages\DemoQA\TextBox.cs" />
     <Compile Include="Pages\SeleniumEasy\BasicFirstFormDemo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
