--- a/SeleniumFramework/SeleniumFramework.csproj
+++ b/SeleniumFramework/SeleniumFramework.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Driver.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="Pages\DemoQA\Buttons.cs" />
     <Compile Include="Pages\DemoQA\DynamicProperties.cs" />
     <Compile Include="Pages\DemoQA\Locators.cs" />
     <Compile Include="Pages\DemoQA\TextBox.cs" />
