--- a/SeleniumFramework/SeleniumFramework.csproj
+++ b/SeleniumFramework/SeleniumFramework.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Pages\DemoQA\Buttons.cs" />
     <Compile Include="Pages\DemoQA\DynamicProperties.cs" />
     <Compile Include="Pages\DemoQA\Locators.cs" />
+    <Compile Include="Pages\DemoQA\SelectMenu.cs" />
     <Compile Include="Pages\DemoQA\TextBox.cs" />
     <Compile Include="Pages\SeleniumEasy\BasicFirstFormDemo.cs" />
     <Compile Include="Pages\SeleniumEasy\DynamicDataLoadingDemo.cs" />
