--- a/SeleniumTests/SeleniumTests.csproj
+++ b/SeleniumTests/SeleniumTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DemoQA\SelectMenuTests.cs" />
     <Compile Include="DemoQA\TextBoxTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeleniumEasy\BasicCheckboxDemoTests.cs" />
     <Compile Include="SeleniumEasy\BasicFirstFormDemoTests.cs" />
     <Compile Include="SeleniumEasy\DynamicDataLoadingDemoTests.cs" />
   </ItemGroup>
