Add demo code of checking if list contains all expected values

--- a/SeleniumFramework/SeleniumFramework.csproj
+++ b/SeleniumFramework/SeleniumFramework.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Pages\DemoQA\TextBox.cs" />
     <Compile Include="Pages\SeleniumEasy\BasicCheckboxDemo.cs" />
     <Compile Include="Pages\SeleniumEasy\BasicFirstFormDemo.cs" />
+    <Compile Include="Pages\SeleniumEasy\BasicSelectDropdownDemo.cs" />
     <Compile Include="Pages\SeleniumEasy\DynamicDataLoadingDemo.cs" />
     <Compile Include="Pages\SeleniumEasy\JavascriptAlertBoxDemo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
