--- a/SeleniumTests/SeleniumTests.csproj
+++ b/SeleniumTests/SeleniumTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeleniumEasy\BasicCheckboxDemoTests.cs" />
     <Compile Include="SeleniumEasy\BasicFirstFormDemoTests.cs" />
+    <Compile Include="SeleniumEasy\BasicSelectDropdownDemoTests.cs" />
     <Compile Include="SeleniumEasy\DynamicDataLoadingDemoTests.cs" />
     <Compile Include="SeleniumEasy\JavascriptAlertBoxDemoTests.cs" />
   </ItemGroup>
