--- a/SeleniumFramework/SeleniumFramework.csproj
+++ b/SeleniumFramework/SeleniumFramework.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Pages\SeleniumEasy\BasicSelectDropdownDemo.cs" />
     <Compile Include="Pages\SeleniumEasy\DynamicDataLoadingDemo.cs" />
     <Compile Include="Pages\SeleniumEasy\JavascriptAlertBoxDemo.cs" />
+    <Compile Include="Pages\WarcraftMovies\Home.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
