--- a/SeleniumFramework/SeleniumFramework.csproj
+++ b/SeleniumFramework/SeleniumFramework.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Common.cs" />
     <Compile Include="Pages\DemoQA\Buttons.cs" />
     <Compile Include="Pages\DemoQA\DynamicProperties.cs" />
+    <Compile Include="Pages\DemoQA\Frames.cs" />
     <Compile Include="Pages\DemoQA\Locators.cs" />
     <Compile Include="Pages\DemoQA\SelectMenu.cs" />
     <Compile Include="Pages\DemoQA\TextBox.cs" />
